--- a/style.css
+++ b/style.css
@@ -1938,7 +1938,19 @@ body {
 .principal-media {
   margin-bottom: 35px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+}
+
+.principal-name {
+  font-family: 'Cinzel', serif;
+  font-size: 2.5em;
+  color: #222;
+  margin-top: 30px;
+  margin-bottom: 0;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
 .principal-text {
@@ -2022,6 +2034,10 @@ body {
     width: min(320px, 92vw);
     aspect-ratio: 3 / 4;
     height: auto;
+  }
+
+  .principal-name {
+    font-size: 1.8em;
   }
 }
 
